# housing_mlops

./: Makefile  README.md  dev-environment.yml  pyproject.toml  requirements.txt  setup.py
housing-mlops/: LICENSE  README.md  pyproject.toml
housing-mlops/housing-mlops/: __init__.py  dataset.py  features.py  plots.py
housing-mlops/housing-mlops/modeling/: predict.py  train.py
notebooks/: MLE_D1_LC1_California_Prediction.ipynb
